--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,4 +6,6 @@
   justify-content: stretch;
   padding: 5rem;
   background: url('/soft-rainbow.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
